# websitejazzhands

./: .gitignore  README.md  about.html  blog-post-template.html  contact.html  cv.html  favorite_videos.txt  footer.html  get-updates.html  header.html  index.html  photography.html  pyproject.toml  quotes.txt  serve.py  sitemap-gen.py  sitemap.txt  sitemap.xml  sitemap_gen.py  styles.css  update.sh  where-is-andre.html  wild-west.html
about/: index.html
adventures/: blog-post-template.html  blog-test.html  import-template.html  index.html  landing-page-template.html
climbing/: all-ticks.html  all-time-stats.html  index.html  last-six-ticks.html  leaderboard.html  top-areas.html  top-climbs.html
contact/: index.html
get-updates/: index.html
js/: adventures.js  index.js  photography.js  resume.js  script.js  wildwest.js
legacy-content/: blog-2022-scuba.html  blog-2022-solosummer-bleedingghyll.html  blog-2022-solosummer-campogrande.html  blog-2022-solosummer-germany.html  blog-2022-solosummer-home-interactive.html  blog-2022-solosummer-home.html  blog-2022-solosummer-lofoten.html  blog-2022-solosummer-norway.html  blog-2022-solosummer-rio.html  blog-2022-solosummer-workaway.html  blog-2023-fa.html  blog-2024-postgrad-southwest.html  blog-alaska-brooks.html  blog-belize.html  blog-chile-home.html  blog-chile-tips.html  blog-colombia-1.html  blog-colombia-2.html  blog-colombia-home.html  blog-costarica-1.html  blog-costarica-2.html  blog-costarica-home.html  blog-elsalvador.html  blog-guatemala-1.html  blog-guatemala-2.html  blog-guatemala-home.html  (+21 more)
(+591 files in other folders)
