[project]
name = "websitejazzhands"
version = "0.1.0"
description = "Personal static website tooling for andre.chiquit.ooo"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sitemap-gen = "sitemap_gen:main"
serve = "serve:main"

[dependency-groups]
dev = [
    "yt-dlp>=2024.1.1",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["sitemap_gen", "serve"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "PTH", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["sitemap_gen"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "yt_dlp.*"
ignore_missing_imports = true
